--- a/public/scss/login/login.scss
+++ b/public/scss/login/login.scss
@@ -56,7 +56,7 @@ body {
     cursor: pointer;
 }
 
-.social-login-element {
+.social-login-element, .fb-root {
     width: 12.5rem;
     height: 3.75rem;
     font-size: 1.2rem;
