--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -73,6 +73,10 @@
                 <span id="emoji">​​​​​​​​​​🔥</span>
                 <span id="emoji">​✨</span>
                 <span id="emoji">🎉</span>
+            <div class="opciones">
+                <i class='bx bx-wink-smile' id="icon_emoji"></i>
+                <i class='bx bx-sticker' id="icon_sticker"></i>
+            </div>
             </div>               
             <div class="container_stickers" id="container_stickers">
                 <span id="sticker"><img src="./img/cute.gif" alt=""></span>
