--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,7 +16,10 @@
     <div class="textos-hero">
         <span class="Antara"><h1>Antara chat</h1><i class='bx bxs-message-rounded-dots'></i></span>
         <p>La red de chat para contactar personas</p>
-        <a href="/register" id="boton_registro">Registrate</a>
+        <div style="display: ;flex">
+        <input type="text" name="" id="" placeholder="Su username" style="padding-right: ;5rem">
+        <a href="/register" id="boton_registro">Chatear</a>
+        </div>
     </div>
     <div class="imagengatito">
         <img src="/img/kitty_1_CC.png" alt="">
