--- a/public/scss/mensajeria/chat.scss
+++ b/public/scss/mensajeria/chat.scss
@@ -21,7 +21,7 @@
 .divisiones{
     display:flex;
     height: 100%;
-    background-color: #ffffff;
+    background-color: #ffff;
 }
 
 /* ---- nav y parte superior de la página ---- */
@@ -187,8 +187,16 @@
             background-color: rgb(69, 173, 43);
             border: 3px solid #1a181d;
             border-radius: 50%;
-/*             width: 1.2rem;
-            height: 1.2rem; */
+            width: 2rem;
+            height: 2rem;
+            position: absolute;
+            right: 1px;
+        }
+
+        .status-off{
+            background-color: rgb(173, 43, 43);
+            border: 3px solid #1a181d;
+            border-radius: 50%;
             width: 2rem;
             height: 2rem;
             position: absolute;
@@ -208,7 +216,7 @@
     .canal_name{
         display: flex;
         align-items: center;    
-        border-bottom: 1px solid rgb(61, 61, 61);
+        border-bottom: 1px solid rgba(61, 61, 61, 0.425);
 
         i{
             font-size: 1.9rem;
@@ -238,7 +246,9 @@
         overflow-y: auto;
         position: relative;
 
-        
+        img{
+            width: 40%;
+        }
 
         .mensaje{
             display: flex;
@@ -400,14 +410,35 @@
         }
     }
     
-        .open_container_emojis{
+        .open_container_emojis:not(.opciones){
             display: grid;
         }
+
+    .opciones{
+        font-size: 2rem;
+        display: flex;
+        position: relative;
+        margin-top: 3.5rem;
+        padding-bottom: 2.2rem;
+        cursor: pointer;
+    }
+    
+    #icon_emoji{
+        position: absolute;
+        right: 50px;
+    }
+
+    #icon_sticker{
+        position: absolute;
+        padding-right: 1rem;
+        left: 50px;
+    }
+
 
     .container_stickers{
         position: absolute;
         display: none;
-        grid-template-columns: repeat(5, 1fr);
+        grid-template-columns: 1fr 1fr;
         gap: 10px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.39);
         padding: 5px 10px;
@@ -417,8 +448,13 @@
 
         span#sticker img{
             width: 10%;
+            cursor: pointer;
         }
     };    
+
+    .open_container_stickers{
+        display: inline-grid;
+    }
 
     button#btn-enviar {
         width: auto;
