--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,6 +4,9 @@
         <div class="login-info-container">
             <h1 class="title">Inicia sesión:</h1>
             <form class="inputs-container" method="post" action="/login" >
+                {{#if error}}
+                <p class="text-center mt-2 bg-danger p-2 fw-bold text-white">{{error}}</p>
+                {{/if}}
                 <input class="input" type="text" placeholder="Usuario" name="email">
                 <input class="input" type="text" placeholder="Contraseña" name="pass">
                 <p><span class="span"> Olvidaste tu Contraseña</span></p>
