--- a/views/register.hbs
+++ b/views/register.hbs
@@ -12,6 +12,7 @@
                     <small>Error</small>
                 </div>
                 <div class="form-control"  name="divEmail">
+                    <p class="text-center mt-2 bg-danger fw-bold text-white">{{error}}</p>
                     <label for="email">Email</label>
                     <input type="email" id="signup-email" class="form-control"
                     placeholder="Email" required  name="email"/>
