--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,9 +16,24 @@
     <div class="textos-hero">
         <span class="Antara"><h1>Antara chat</h1><i class='bx bxs-message-rounded-dots'></i></span>
         <p>La red de chat para contactar personas</p>
-        <div style="display: ;flex">
-        <input type="text" name="" id="" placeholder="Su username" style="padding-right: ;5rem">
-        <a href="/register" id="boton_registro">Chatear</a>
+        <div style="display: flex;">
+        <form class="form-horizontal form-material" id="loginform" action="/chat">
+                        <h3 class="box-title m-b-20 text-center">Chatear</h3>
+                        <div class="form-group ">
+                            <div class="col-xs-12">
+                                <input class="form-control" type="text" required="" placeholder="Nombre de usuario" name="nombre"> </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-xs-12">
+                                <input class="form-control" type="text" required="" placeholder="Sala de chat" name="sala"> </div>
+                        </div>
+
+                        <div class="form-group text-center">
+                            <div class="col-xs-12 p-b-20">
+                                <button class="btn btn-block btn-lg btn-info btn-rounded" type="submit">Ingresar al chat</button>
+                            </div>
+                        </div>
+        </form>
         </div>
     </div>
     <div class="imagengatito">
@@ -117,6 +132,18 @@
 
 
 <script src="https://kit.fontawesome.com/c15b744a04.js" crossorigin="anonymous"></script>
+<script src="/assets/plugins/jquery/jquery.min.js"></script>
+
+
 <style media="all" id="fa-v4-font-face"></style>
 <style media="all" id="fa-v4-shims"></style>
 <style media="all" id="fa-main"></style>
+
+<script type="text/javascript">
+        $(function() {
+            $(".preloader").fadeOut();
+        });
+        $(function() {
+            $('[data-toggle="tooltip"]').tooltip()
+        });
+</script>
