--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -9,8 +9,8 @@
                 <h6>3</h6>
             </div>
             <div class="cerrar_sesion">
-                <a href="#">
-                <button>Cerrar sesión</button>
+                <a href="/">
+                    <button>Cerrar sesión</button>
                 </a>
             </div>
             <!--         <i class='bx bx-cog'></i> -->
