--- a/views/home.hbs
+++ b/views/home.hbs
@@ -17,7 +17,7 @@
         <span class="Antara"><h1>Antara chat</h1><i class='bx bxs-message-rounded-dots'></i></span>
         <p>La red de chat para contactar personas</p>
         <div style="display: flex;">
-        <form class="form-horizontal form-material" id="loginform" action="/chat">
+        <form class="form-horizontal form-landing form-material" id="loginform" action="/chat">
                         <h3 class="box-title m-b-20 text-center">Chatear</h3>
                         <div class="form-group ">
                             <div class="col-xs-12">
