agregando por las dudas

--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -73,16 +73,26 @@
                 <span id="emoji">​​​​​​​​​​🔥</span>
                 <span id="emoji">​✨</span>
                 <span id="emoji">🎉</span>
-            <div class="opciones">
+            <div class="opciones" id="opciones">
                 <i class='bx bx-wink-smile' id="icon_emoji"></i>
                 <i class='bx bx-sticker' id="icon_sticker"></i>
             </div>
             </div>               
             <div class="container_stickers" id="container_stickers">
-                <span id="sticker"><img src="./img/cute.gif" alt=""></span>
-                <span id="sticker"><img src="./img/cute2.gif" alt=""></span>
-                <span id="sticker"><img src="./img/cute3.png" alt=""></span>
-                <span id="sticker"><img src="./img/cute4.gif" alt=""></span>
+                <div class="divstickers">
+                    <span id="sticker"><img src="./img/cute.gif" alt=""></span>
+                    <span id="sticker"><img src="./img/cute2.gif" alt=""></span>
+                    <span id="sticker"><img src="./img/cute3.png" alt=""></span>
+                    <span id="sticker"><img src="./img/cute4.gif" alt=""></span>
+                    <span id="sticker"><img src="./img/cute3.png" alt=""></span>
+                    <span id="sticker"><img src="./img/cute4.gif" alt=""></span>
+                    <span id="sticker"><img src="./img/cute.gif" alt=""></span>
+                    <span id="sticker"><img src="./img/cute2.gif" alt=""></span>
+                </div>
+            <div class="opciones_2" id="opciones">
+                <i class='bx bx-wink-smile' id="icon_emoji"></i>
+                <i class='bx bx-sticker' id="icon_sticker"></i>
+            </div>
             </div>  
             <div class="div-area-mensaje" style="display: flex;margin: 0 1rem;padding: 0 0 0.2rem 0">
 {{!--             <h6 class="text-center w-100 fs-4">Username</h6> --}}
