--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -90,8 +90,8 @@
                     <span id="sticker"><img src="./img/cute2.gif" alt=""></span>
                 </div>
             <div class="opciones_2" id="opciones">
-                <i class='bx bx-wink-smile' id="icon_emoji"></i>
-                <i class='bx bx-sticker' id="icon_sticker"></i>
+                <i class='bx bx-wink-smile' id="icon_emoji_2"></i>
+                <i class='bx bx-sticker' id="icon_sticker_2"></i>
             </div>
             </div>  
             <div class="div-area-mensaje" style="display: flex;margin: 0 1rem;padding: 0 0 0.2rem 0">
