--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -80,14 +80,14 @@
             </div>               
             <div class="container_stickers" id="container_stickers">
                 <div class="divstickers">
-                    <span id="sticker"><img src="./img/cute.gif" alt=""></span>
-                    <span id="sticker"><img src="./img/cute2.gif" alt=""></span>
-                    <span id="sticker"><img src="./img/cute3.png" alt=""></span>
-                    <span id="sticker"><img src="./img/cute4.gif" alt=""></span>
-                    <span id="sticker"><img src="./img/cute3.png" alt=""></span>
-                    <span id="sticker"><img src="./img/cute4.gif" alt=""></span>
-                    <span id="sticker"><img src="./img/cute.gif" alt=""></span>
-                    <span id="sticker"><img src="./img/cute2.gif" alt=""></span>
+                    <span id="sticker"><img src="./img/s_1.gif" alt=""></span>
+                    <span id="sticker"><img src="./img/s_2.gif" alt=""></span>
+                    <span id="sticker"><img src="./img/s_3.gif" alt=""></span>
+                    <span id="sticker"><img src="./img/s_4.gif" alt=""></span>
+                    <span id="sticker"><img src="./img/s_5.gif" alt=""></span>
+                    <span id="sticker"><img src="./img/s_6.gif" alt=""></span>
+                    <span id="sticker"><img src="./img/s_7.gif" alt=""></span>
+                    <span id="sticker"><img src="./img/s_8.gif" alt=""></span>
                 </div>
             <div class="opciones_2" id="opciones">
                 <i class='bx bx-wink-smile' id="icon_emoji_2"></i>
