--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,7 +3,9 @@
     <nav>
         <div class="nav_landing">
             <div style="display:flex;align-items: baseline;">
-            <h1 class="antara_nav">Antara</h1>
+            <a href="/" class="enlace_titulo">
+                <h1 class="antara_nav">Antara</h1>
+            </a>
             <p>Lorem ipsum dolor sit amet.</p>
             </div>
         <div class="acciones_nav">
