--- a/public/scss/landing/landing.scss
+++ b/public/scss/landing/landing.scss
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+a{
+    text-decoration: none;
+    color: #ffffff;
+}
+
+
 .bg-landing{
     background-color: #fff;
 }
