--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -131,4 +131,4 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/socket-client-jquery.js"></script>
 <script src="/js/socket-client.js"></script>
-{{!-- <script src="/js/emojis.js"></script>--}}
+<script src="/js/emojis.js"></script>
