--- a/views/home.hbs
+++ b/views/home.hbs
@@ -51,6 +51,7 @@
 </header>
 
 <section class="wave-contenedor website">
+        <img src="/img/primer.png" alt="">
         <div class="contenedor-textos-main">
             <h2 class="titulo left">¿Quiénes Somos?</h2>
             <p class="parrafo">
