Modificaciones al boton en home

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -39,7 +39,7 @@
 
                         <div class="form-group text-center">
                             <div class="col-xs-12 p-b-20">
-                                <button class="btn btn-block btn-lg btn-info btn-rounded" type="submit">Ingresar al chat</button>
+                                <button class="py-2 btn btn-block btn-lg btn-info btn-rounded" type="submit">Ingresar al chat</button>
                             </div>
                         </div>
         </form>
