--- a/views/home.hbs
+++ b/views/home.hbs
@@ -6,7 +6,7 @@
             <a href="/" class="enlace_titulo">
                 <h1 class="antara_nav">Antara</h1>
             </a>
-            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Juntos en un mismo canal</p>
             </div>
         <div class="acciones_nav">
             <a href="/login" class="login_nav">Iniciar sesión</a>
